# ERL_Robot_Manipulation

./: .gitignore  README.md  external_git_repositories.sh  frames_2024-05-10_16.45.56.gv  requirements.txt
src/main/: CMakeLists.txt  package.xml
src/main/config/: controllers.yaml
src/main/launch/: main.launch  main.launch.py  octomap_server_launch.py  panda_gazebo.launch.py  robot_state_publisher.py  xarm6_gazebo.launch.py
src/main/scripts/: converting_video_frames_to_point_clouds.py  joint_position_controller.py  joint_velocity_controller.py  move_arm.py  publishing_point_cloud.py  publishing_point_cloud_map.py  topic_listener.py
src/main/src/: robot_controller.cpp  xarm6_traj_controller_publisher.py  xarm6_velocity_publisher.cpp
src/planner/: CMakeLists.txt  package.xml
src/planner/scripts/: main.py
src/planner/scripts/planners/: RRT.py
src/planner/scripts/problems/: dodging_cones_2D.py  dodging_cones_2D_Occupied_SDF.py  dodging_cones_2D_SDF.py  ellipse_2D_SDF.py  narrow_path_2D.py  visualizer_2D.py  visualizer_3D.py
src/planner/src/: RigidBodyPlanning.cpp  StateSampling.cpp  geometric_planning_for_rigid_body_in_3D.cpp  my_cpp_node.cpp
src/robot_descriptions/panda_description/: CMakeLists.txt  package.xml
src/robot_descriptions/panda_description/description/: manipulator.control.xacro  manipulator.urdf.xacro  panda_arm.xacro  panda_hand copy.xacro  panda_hand.xacro
src/robot_descriptions/panda_description/src/: my_cpp_node.cpp
src/robot_descriptions/xarm6/: CMakeLists.txt  package.xml
src/robot_descriptions/xarm6/launch/: _robot_description.launch.py  _rviz_display.launch.py  xarm6.launch.py  xarm6.launch_2.py  xarm6_3.launch.py
src/robot_descriptions/xarm6/launch/lib/: robot_description_lib.py
src/robot_descriptions/xarm6/urdf/: base.urdf  base_com.urdf  link1.urdf  link1_com.urdf  link2.urdf  link2_com.urdf  link3.urdf  link3_com.urdf  link4.urdf  link4_com.urdf  link5.urdf  link5_com.urdf  link6.urdf  link6_com.urdf  xarm6.urdf.xacro  xarm6_robot.urdf  xarm6_robot_white.urdf  xarm6_with_gripper.urdf
src/robot_descriptions/xarm6_description/: CMakeLists.txt  package.xml
src/robot_descriptions/xarm6_description/controller/: xarm6_controllers.yaml  xarm_gripper_controllers.yaml
src/robot_descriptions/xarm6_description/launch/: _robot_description.launch.py  _robot_joint_state.launch.py  _robot_rviz_display.launch.py  _rviz_display.launch.py  lite6_rviz_display.launch.py  uf850_rviz_display.launch.py  xarm6_rviz_display.launch.py
src/robot_descriptions/xarm6_description/launch/lib/: robot_controller_lib.py  robot_description_lib.py
src/robot_descriptions/xarm6_description/models/: camera.urdf.xacro
src/robot_descriptions/xarm6_description/urdf/: dual_xarm_device.urdf.xacro  xarm_device.urdf.xacro  xarm_device_macro.xacro
src/robot_descriptions/xarm6_description/urdf/camera/: camera.gazebo.xacro  realsense.gazebo.xacro
src/robot_descriptions/xarm6_description/urdf/gripper/: bio_gripper_macro.xacro  gripper.urdf.xacro  gripper_macro.xacro  xarm_gripper_macro.xacro
src/robot_descriptions/xarm6_description/urdf/lite6/: lite6.urdf.xacro  lite6_robot_macro.xacro
src/robot_descriptions/xarm6_description/urdf/uf850/: uf850.urdf.xacro  uf850_robot_macro.xacro
src/robot_descriptions/xarm6_description/urdf/vacuum_gripper/: vacuum_gripper.urdf.xacro  vacuum_gripper_macro.xacro
src/robot_descriptions/xarm6_description/urdf/xarm6/: xarm6.urdf.xacro  xarm6_robot_macro.xacro
src/robot_descriptions/xarm6_description/worlds/: table.world
